# regex-intersect

./: Cargo.toml  README.md
.github/workflows/: build.yml
regex-intersect/: Cargo.toml
regex-intersect/examples/: demo.rs
regex-intersect/src/: glob.rs  lib.rs
xtask/src/: main.rs
