[package]
name = "regex-intersect"
version = "1.0.0"
edition = "2021"

description = "Find out if two regexes have a non-empty intersection"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/regex-intersect/"
repository = "https://github.com/jondot/regex-intersect"
keywords = ["regex", "intersect", "match"]
license = "Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tracing = ["dep:tracing", "dep:tracing-tree", "dep:tracing-subscriber"]

[dependencies]

"regex-syntax" = "*"
tracing = { version = "^0.1.34", optional = true }
tracing-tree = { version = "*", optional = true }
tracing-subscriber = { version = "^0.3.11", optional = true, features = [
  "env-filter",
] }
