[package]
name = "regex-intersect"
version = "1.2.0"
edition = "2021"

description = "Find out if two regexes have a non-empty intersection"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/regex-intersect/"
repository = "https://github.com/jondot/regex-intersect"
keywords = ["regex", "intersect", "match"]
license = "Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tracing = ["dep:tracing", "dep:tracing-tree", "dep:tracing-subscriber"]
glob = ["dep:globset"]

[dependencies]

regex-syntax = "^0.6.27"
thiserror = "1.0"
globset = { version = "^0.4.9", optional = true }
tracing = { version = "^0.1.34", optional = true }
tracing-tree = { version = "^0.2.1", optional = true }
tracing-subscriber = { version = "^0.3.11", optional = true, features = [
  "env-filter",
] }

[dev-dependencies]
pretty_assertions = "^1.2.1"

[[example]]
name = "demo"
required-features = ["tracing", "glob"]
